Added pictures to error pages

--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -249,6 +249,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\Error404.png" />
+    <Content Include="images\Error404Full.jpg" />
+    <Content Include="images\Error500.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\Noit\Views\web.config" />
