Added tests for ContinueTest and UserIsOwner

--- a/src/Leaf.Tests/Leaf.Tests.csproj
+++ b/src/Leaf.Tests/Leaf.Tests.csproj
@@ -131,10 +131,12 @@
     <Compile Include="Models\QuestionTests\PropertiesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Noit\FullTestServiceTests\ConstructorTests.cs" />
+    <Compile Include="Services\Noit\FullTestServiceTests\ContinueTestTests.cs" />
     <Compile Include="Services\Noit\FullTestServiceTests\GetNextQuestionTests.cs" />
     <Compile Include="Services\Noit\FullTestServiceTests\GetTestByIdTests.cs" />
     <Compile Include="Services\Noit\FullTestServiceTests\CreateTestTests.cs" />
     <Compile Include="Services\Noit\FullTestServiceTests\HasUnfinishedTestTests.cs" />
+    <Compile Include="Services\Noit\FullTestServiceTests\UserIsOwnerTests.cs" />
     <Compile Include="Services\Noit\ModerationServiceTests\ApproveTests.cs" />
     <Compile Include="Services\Noit\ModerationServiceTests\ConstructorTests.cs" />
     <Compile Include="Services\Noit\ModerationServiceTests\GetPendingSubmissionsTests.cs" />
