--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -216,7 +216,7 @@
     <Compile Include="Areas\Administration\Controllers\AdministrationController.cs" />
     <Compile Include="Areas\Administration\Controllers\UsersAdministrationController.cs" />
     <Compile Include="Areas\Administration\Models\UserViewModel.cs" />
-    <Compile Include="Areas\Noit\Controllers\FullTestController.cs" />
+    <Compile Include="Areas\Noit\Controllers\TestsController.cs" />
     <Compile Include="Areas\Noit\Controllers\ModerationController.cs" />
     <Compile Include="Areas\Noit\Controllers\SubmitController.cs" />
     <Compile Include="Areas\Noit\Models\FullTest\NextQuestionViewModel.cs" />
@@ -256,12 +256,12 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\Noit\Views\web.config" />
-    <Content Include="Areas\Noit\Views\FullTest\FullTest.cshtml" />
-    <Content Include="Areas\Noit\Views\FullTest\Test.cshtml" />
+    <Content Include="Areas\Noit\Views\Tests\FullTest.cshtml" />
+    <Content Include="Areas\Noit\Views\Tests\Test.cshtml" />
     <Content Include="Areas\Noit\Views\Shared\_NoitLayout.cshtml" />
     <Content Include="Areas\Noit\Views\Shared\_Question.cshtml" />
     <Content Include="Areas\Noit\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Noit\Views\FullTest\FinishedTest.cshtml" />
+    <Content Include="Areas\Noit\Views\Tests\FinishedTest.cshtml" />
     <Content Include="Areas\Noit\Views\Submit\Index.cshtml" />
     <Content Include="Areas\Noit\Views\Submit\Submission.cshtml" />
     <Content Include="Areas\Noit\Views\Moderation\Index.cshtml" />
@@ -275,7 +275,7 @@
     <Content Include="Areas\Administration\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Administration\Views\UsersAdministration\Index.cshtml" />
     <Content Include="Areas\Administration\Views\Administration\Index.cshtml" />
-    <Content Include="Areas\Noit\Views\FullTest\Practice.cshtml" />
+    <Content Include="Areas\Noit\Views\Tests\Practice.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
