Removed NOIT area and moved tests, submit and moderation controllers.

--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -216,17 +216,17 @@
     <Compile Include="Areas\Administration\Controllers\AdministrationController.cs" />
     <Compile Include="Areas\Administration\Controllers\UsersAdministrationController.cs" />
     <Compile Include="Areas\Administration\Models\UserViewModel.cs" />
-    <Compile Include="Areas\Noit\Controllers\TestsController.cs" />
-    <Compile Include="Areas\Noit\Controllers\ModerationController.cs" />
-    <Compile Include="Areas\Noit\Controllers\SubmitController.cs" />
-    <Compile Include="Areas\Noit\Models\FullTest\NextQuestionViewModel.cs" />
-    <Compile Include="Areas\Noit\Models\Submit\NewSubmitViewModel.cs" />
-    <Compile Include="Areas\Noit\Models\Submit\ShortSubmission.cs" />
-    <Compile Include="Areas\Noit\Models\Submit\SubmissionViewModel.cs" />
-    <Compile Include="Areas\Noit\Models\FullTest\TestDetailsViewModel.cs" />
-    <Compile Include="Areas\Noit\Models\FullTest\TestViewModel.cs" />
-    <Compile Include="Areas\Noit\Models\IViewModelFactory.cs" />
-    <Compile Include="Areas\Noit\NoitAreaRegistration.cs" />
+    <Compile Include="Areas\Moderation\ModerationAreaRegistration.cs" />
+    <Compile Include="Controllers\TestsController.cs" />
+    <Compile Include="Areas\Moderation\Controllers\ModerationController.cs" />
+    <Compile Include="Controllers\SubmitController.cs" />
+    <Compile Include="Models\Tests\NextQuestionViewModel.cs" />
+    <Compile Include="Models\Submit\NewSubmitViewModel.cs" />
+    <Compile Include="Models\Submit\ShortSubmission.cs" />
+    <Compile Include="Models\Submit\SubmissionViewModel.cs" />
+    <Compile Include="Models\Tests\TestDetailsViewModel.cs" />
+    <Compile Include="Models\Tests\TestViewModel.cs" />
+    <Compile Include="Models\IViewModelFactory.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -255,27 +255,27 @@
     <Content Include="images\Error500.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Areas\Noit\Views\web.config" />
-    <Content Include="Areas\Noit\Views\Tests\FullTest.cshtml" />
-    <Content Include="Areas\Noit\Views\Tests\Test.cshtml" />
-    <Content Include="Areas\Noit\Views\Shared\_NoitLayout.cshtml" />
-    <Content Include="Areas\Noit\Views\Shared\_Question.cshtml" />
-    <Content Include="Areas\Noit\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Noit\Views\Tests\FinishedTest.cshtml" />
-    <Content Include="Areas\Noit\Views\Submit\Index.cshtml" />
-    <Content Include="Areas\Noit\Views\Submit\Submission.cshtml" />
-    <Content Include="Areas\Noit\Views\Moderation\Index.cshtml" />
-    <Content Include="Areas\Noit\Views\Moderation\Submissions.cshtml" />
-    <Content Include="Areas\Noit\Views\Submit\New.cshtml" />
-    <Content Include="Areas\Noit\Views\Moderation\Submission.cshtml" />
-    <Content Include="Areas\Noit\Views\Moderation\Question.cshtml" />
-    <Content Include="Areas\Noit\Views\Moderation\_ListSubmissionPartial.cshtml" />
+    <Content Include="Views\Tests\FullTest.cshtml" />
+    <Content Include="Views\Tests\Test.cshtml" />
+    <Content Include="Views\Tests\_Question.cshtml" />
+    <Content Include="Views\Tests\FinishedTest.cshtml" />
+    <Content Include="Views\Submit\Index.cshtml" />
+    <Content Include="Views\Submit\Submission.cshtml" />
+    <Content Include="Areas\Moderation\Views\Moderation\Index.cshtml" />
+    <Content Include="Areas\Moderation\Views\Moderation\Submissions.cshtml" />
+    <Content Include="Views\Submit\New.cshtml" />
+    <Content Include="Areas\Moderation\Views\Moderation\Submission.cshtml" />
+    <Content Include="Areas\Moderation\Views\Moderation\Question.cshtml" />
+    <Content Include="Areas\Moderation\Views\Moderation\_ListSubmissionPartial.cshtml" />
     <Content Include="Areas\Administration\Views\web.config" />
     <Content Include="Areas\Administration\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Administration\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Administration\Views\UsersAdministration\Index.cshtml" />
     <Content Include="Areas\Administration\Views\Administration\Index.cshtml" />
-    <Content Include="Areas\Noit\Views\Tests\Practice.cshtml" />
+    <Content Include="Views\Tests\Practice.cshtml" />
+    <Content Include="Areas\Moderation\Views\web.config" />
+    <Content Include="Areas\Moderation\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Moderation\Views\Shared\_Layout.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -328,6 +328,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Moderation\Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
