--- a/src/Leaf.Models/Leaf.Models.csproj
+++ b/src/Leaf.Models/Leaf.Models.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
+    <Compile Include="Topic.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
