--- a/src/Leaf.Web/Web.config
+++ b/src/Leaf.Web/Web.config
@@ -21,7 +21,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <customErrors mode="On" defaultRedirect="~/Error" redirectMode="ResponseRedirect">
+    <customErrors mode="Off" defaultRedirect="~/Error" redirectMode="ResponseRedirect">
       <error redirect="~/Error/NotFound" statusCode="404" />
       <error redirect="~/Error/ServerError" statusCode="500" />
     </customErrors>
