--- a/src/Leaf.Tests/Leaf.Tests.csproj
+++ b/src/Leaf.Tests/Leaf.Tests.csproj
@@ -130,25 +130,25 @@
     <Compile Include="Models\QuestionTests\ConstructorTests.cs" />
     <Compile Include="Models\QuestionTests\PropertiesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Noit\FullTestServiceTests\ConstructorTests.cs" />
-    <Compile Include="Services\Noit\FullTestServiceTests\ContinueTestTests.cs" />
-    <Compile Include="Services\Noit\FullTestServiceTests\GetNextQuestionTests.cs" />
-    <Compile Include="Services\Noit\FullTestServiceTests\GetTestByIdTests.cs" />
-    <Compile Include="Services\Noit\FullTestServiceTests\CreateTestTests.cs" />
-    <Compile Include="Services\Noit\FullTestServiceTests\HasUnfinishedTestTests.cs" />
-    <Compile Include="Services\Noit\FullTestServiceTests\UserIsOwnerTests.cs" />
-    <Compile Include="Services\Noit\ModerationServiceTests\ApproveTests.cs" />
-    <Compile Include="Services\Noit\ModerationServiceTests\ConstructorTests.cs" />
-    <Compile Include="Services\Noit\ModerationServiceTests\GetPendingSubmissionsTests.cs" />
-    <Compile Include="Services\Noit\ModerationServiceTests\GetSubmissionByIdTests.cs" />
-    <Compile Include="Services\Noit\SubmitServiceTests\ConstructorTests.cs" />
-    <Compile Include="Services\Noit\SubmitServiceTests\CreateSubmission.cs" />
-    <Compile Include="Services\Noit\SubmitServiceTests\GetCategoriesTests.cs" />
-    <Compile Include="Services\Noit\SubmitServiceTests\GetSubmissionByIdTests.cs" />
-    <Compile Include="Services\Noit\TestServiceTests\ConstructorTests.cs" />
-    <Compile Include="Services\Noit\TestServiceTests\CreateTestTests.cs" />
-    <Compile Include="Services\Noit\TestServiceTests\GetLastTestByUserIdTests.cs" />
-    <Compile Include="Services\Noit\TestServiceTests\GetTestByIdTests.cs" />
+    <Compile Include="Services\TestServiceTests\ConstructorTests.cs" />
+    <Compile Include="Services\TestServiceTests\ContinueTestTests.cs" />
+    <Compile Include="Services\TestServiceTests\GetNextQuestionTests.cs" />
+    <Compile Include="Services\TestServiceTests\GetTestByIdTests.cs" />
+    <Compile Include="Services\TestServiceTests\CreateTestTests.cs" />
+    <Compile Include="Services\TestServiceTests\HasUnfinishedTestTests.cs" />
+    <Compile Include="Services\TestServiceTests\UserIsOwnerTests.cs" />
+    <Compile Include="Services\ModerationServiceTests\ApproveTests.cs" />
+    <Compile Include="Services\ModerationServiceTests\ConstructorTests.cs" />
+    <Compile Include="Services\ModerationServiceTests\GetPendingSubmissionsTests.cs" />
+    <Compile Include="Services\ModerationServiceTests\GetSubmissionByIdTests.cs" />
+    <Compile Include="Services\SubmitServiceTests\ConstructorTests.cs" />
+    <Compile Include="Services\SubmitServiceTests\CreateSubmission.cs" />
+    <Compile Include="Services\SubmitServiceTests\GetCategoriesTests.cs" />
+    <Compile Include="Services\SubmitServiceTests\GetSubmissionByIdTests.cs" />
+    <Compile Include="Services\Utilities\TestUtilityTests\ConstructorTests.cs" />
+    <Compile Include="Services\Utilities\TestUtilityTests\CreateTestTests.cs" />
+    <Compile Include="Services\Utilities\TestUtilityTests\GetLastTestByUserIdTests.cs" />
+    <Compile Include="Services\Utilities\TestUtilityTests\GetTestByIdTests.cs" />
     <Compile Include="Web\Noit\FullTestControllerTests\ConstructorTests.cs" />
     <Compile Include="Web\Noit\FullTestControllerTests\IndexTests.cs" />
     <Compile Include="Web\Noit\FullTestControllerTests\ReceiveAnswerTests.cs" />
