Replaced sending test answers one by one with sending them at once

--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -221,10 +221,12 @@
     <Compile Include="Areas\Moderation\Controllers\ModerationController.cs" />
     <Compile Include="Controllers\SubmitController.cs" />
     <Compile Include="Models\Tests\IndexViewModel.cs" />
+    <Compile Include="Models\Tests\NewTestViewModel.cs" />
     <Compile Include="Models\Tests\NextQuestionViewModel.cs" />
     <Compile Include="Models\Submit\NewSubmitViewModel.cs" />
     <Compile Include="Models\Submit\ShortSubmission.cs" />
     <Compile Include="Models\Submit\SubmissionViewModel.cs" />
+    <Compile Include="Models\Tests\QuestionViewModel.cs" />
     <Compile Include="Models\Tests\TestDetailsViewModel.cs" />
     <Compile Include="Models\Tests\TestViewModel.cs" />
     <Compile Include="Models\IViewModelFactory.cs" />
@@ -256,7 +258,7 @@
     <Content Include="images\Error500.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Views\Tests\Test.cshtml" />
+    <Content Include="Views\Tests\New.cshtml" />
     <Content Include="Views\Tests\_Question.cshtml" />
     <Content Include="Views\Tests\FinishedTest.cshtml" />
     <Content Include="Views\Submit\Index.cshtml" />
