Implemented creating category statistics

--- a/src/Leaf.Services/Leaf.Services.csproj
+++ b/src/Leaf.Services/Leaf.Services.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Contracts\IModerationService.cs" />
     <Compile Include="Helpers\AnsweredQuestionHelper.cs" />
     <Compile Include="Helpers\CategoryStatisticHelper.cs" />
+    <Compile Include="Helpers\Contracts\IFinishedTestHelper.cs" />
     <Compile Include="Helpers\FinishedTestHelper.cs" />
     <Compile Include="Helpers\IHelperFactory.cs" />
     <Compile Include="Utilities\Contracts\IQuestionUtility.cs" />
