--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Areas\Administration\Controllers\AdministrationController.cs" />
     <Compile Include="Areas\Administration\Controllers\UsersAdministrationController.cs" />
     <Compile Include="Areas\Administration\Models\UserViewModel.cs" />
+    <Compile Include="Areas\Moderation\Models\RejectViewModel.cs" />
     <Compile Include="Areas\Moderation\ModerationAreaRegistration.cs" />
     <Compile Include="Controllers\TestsController.cs" />
     <Compile Include="Areas\Moderation\Controllers\ModerationController.cs" />
@@ -274,6 +275,7 @@
     <Content Include="Areas\Moderation\Views\web.config" />
     <Content Include="Areas\Moderation\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Moderation\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Moderation\Views\Moderation\Reject.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -311,7 +313,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Moderation\Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
